--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -845,7 +845,7 @@
       <tbody>
         <tr>
           <td class="no-stretch ps-3">
-            <img class="bison-logo-square small-icon">
+            <img class="logo-square small">
           </td>
           <td class="text-end">
             <div class="d-inline-flex flex-column align-items-end text-nowrap">
