--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -474,7 +474,7 @@
                     </div>
                     <div class="flex-center ps-2 pb-2 border-start">
                       <div class="d-inline-block">
-                        <img class="bison-logo-full small">
+                        <img class="logo-full small">
                       </div>
                     </div>
 
