--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -1,6 +1,6 @@
 {{define "dexsettings"}}
 {{template "top" .}}
-<div id="main" data-handler="dexsettings" data-host="{{.Exchange.Host}}" class="py-5 overflow-y-auto">
+<div id="main" data-handler="dexsettings" data-host="{{.Exchange.Host}}" data-disabled="{{.Exchange.Disabled}}" class="py-5 overflow-y-auto">
   <section class="flex-stretch-column mw-425 mx-auto pb-3 pt-2">
     <div class="d-flex justify-content-start align-items-center">
       <span id="goBackToSettings" class="ico-wide-headed-left-arrow fs24 py-1 px-2 lh1 hoverbg pointer"></span>
@@ -21,11 +21,13 @@
         <div class="flex-center flex-grow-1 pe-3">
           <div class="flex-stretch-column w-100">
             <div class="d-flex justify-content-between align-items-center">
-              <span>[[[target_tier]]] <span class="fs14 ico-info me-1" data-tooltip="[[[target_tier_tooltip]]]"></span></span>
+              <span>[[[target_tier]]] <span class="fs14 ico-info me-1"
+                  data-tooltip="[[[target_tier_tooltip]]]"></span></span>
               <span id="targetTier"></span>
             </div>
             <div class="d-flex justify-content-between align-items-center">
-              <span>[[[Actual Tier]]] <span class="fs14 ico-info me-1" data-tooltip="[[[current_tier_tooltip]]]"></span></span>
+              <span>[[[Actual Tier]]] <span class="fs14 ico-info me-1"
+                  data-tooltip="[[[current_tier_tooltip]]]"></span></span>
               <span id="effectiveTier"></span>
             </div>
             <div class="d-flex justify-content-between align-items-center">
@@ -39,7 +41,7 @@
           </div>
         </div>
         <div class="flex-center p-4 border-start">
-          <button id="changeTier">[[[Change Tier]]]</button>
+          <button id="changeTier" {{if .Exchange.Disabled}}disabled{{end}}>[[[Change Tier]]]</button>
         </div>
       </div>
       <div id="otherBondSettings" class="d-flex align-items-stretch mt-3 border-top">
@@ -47,7 +49,7 @@
           <div id="autoRenewBox" class="d-flex justify-content-between align-items-center hoverbg pointer">
             <span>Auto Renew</span>
             <div>
-              <div id="toggleAutoRenew" class="anitoggle"></div>
+              <div id="toggleAutoRenew" class="anitoggle" {{if .Exchange.Disabled}}disabled{{end}}></div>
             </div>
           </div>
           <div id="renewErr" class="d-hide flex-center text-danger fs15"></div>
@@ -61,7 +63,7 @@
             </div>
             <div class="col-6 text-end">
               <span id="penaltyComps"></span>
-              <input id="penaltyCompInput" type="number" step="1" class="micro thin text-center d-hide fs14">
+              <input id="penaltyCompInput" type="number" step="1" class="micro thin text-center d-hide fs14" {{if .Exchange.Disabled}}disabled{{end}}>
             </div>
           </div>
           <div id="penaltyCompsErr" class="d-hide flex-center text-danger fs15"></div>
@@ -73,18 +75,24 @@
     </div>
     <div class="fs15 text-center d-hide text-danger text-break pt-3 mt-3 px-3 border-top" id="errMsg"></div>
     <div class="settings mt-3 border-top">
+      <div class="border-bottom px-3 py-2">
+        <button id="toggleAccountStatusBtn">
+        {{if not .Exchange.Disabled}}
+          [[[Disable Account]]]
+        {{else}}
+          [[[Enable Account]]]
+        {{end}}
+        </button>
+      </div>
       <div class="border-bottom px-3 py-2 {{if .Exchange.ViewOnly}}d-hide{{end}}">
         <button id="exportDexBtn">[[[Export Account]]]</button>
       </div>
-      <div class="border-bottom px-3 py-2">
-        <button id="disableAcctBtn">[[[Disable Account]]]</button>
-      </div>
-      <div class="border-bottom px-3 py-2">
+      <div class="border-bottom px-3 py-2 {{if .Exchange.Disabled}}d-hide{{end}}">
         <input type="file" class="d-none" id="certFileInput">
         <button id="updateCertBtn">[[[Update TLS Certificate]]]</button>
         <span class="mx-2 d-hide text-success" id="updateCertMsg">[[[successful_cert_update]]]</span>
       </div>
-      <div class="border-bottom px-3 py-2 border-bottom">
+      <div class="border-bottom px-3 py-2 border-bottom {{if .Exchange.Disabled}}d-hide{{end}}">
         <button id="updateHostBtn">[[[update dex host]]]</button>
       </div>
     </div>
