app: Toggle trading tier/reputation UI

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -426,7 +426,11 @@
               <div id="reputationAndTradingTierBox">
                 <div id="showTradingTier" class="p-2 grey fs15 hoverbg pointer">
                   <span class="ico-plus fs10 me-2"></span>
-                  <span>Show trading tier info</span>
+                  <span>[[[Show trading tier info]]]</span>
+                </div>
+                <div id="hideTradingTier" class="p-2 grey fs15 hoverbg pointer d-hide">
+                  <span class="ico-minus fs10 me-2"></span>
+                  <span>[[[Hide trading tier info]]]</span>
                 </div>
                 <div id="tradingLimits" class="d-flex align-items-stretch fs15 mx-2 mb-2 border d-hide">
                   <div class="d-flex flex-column flex-grow-1 align-items-stretch p-2">
@@ -474,7 +478,11 @@
                 </div>
                 <div id="showTradingReputation" class="p-2 grey fs15 hoverbg pointer">
                   <span class="ico-plus fs10 me-2"></span>
-                  <span>Show reputation</span>
+                  <span>[[[Show reputation]]]</span>
+                </div>
+                <div id="hideTradingReputation" class="p-2 grey fs15 hoverbg pointer d-hide">
+                  <span class="ico-minus fs10 me-2"></span>
+                  <span>[[[Hide reputation]]]</span>
                 </div>
                 <div id="reputationMeter" class="px-3 mb-3 border-bottom d-hide">
                   {{template "reputationMeter"}}
