webserver/site: use border color to show if address is valid or invalid
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -70,6 +70,14 @@ select {
   }
 }
 
+.border-danger {
+  border-color: red;
+}
+
+.border-success {
+  border-color: #009931;
+}
+
 #confirmRegForm {
   width: 425px;
 
