--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -526,10 +526,7 @@
       </div>
       <div>
         <label for="sendAddr">[[[Address]]]</label>
-        <div class="d-flex">
-          <input type="text" class="col-1" id="sendAddr" spellcheck="false">
-          <span id="validAddr" class="ico-check mx-2 pt-2 d-hide"></span>
-        </div>
+          <input type="text" id="sendAddr" spellcheck="false">
       </div>
       <div class="d-flex align-items-stretch">
         <div class="flex-grow-1 pe-3">
