--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -713,3 +713,11 @@ div[data-handler=markets] {
     }
   }
 }
+
+.bot-problems-section {
+  background-color: #f00a;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  padding-left: 2px;
+  border-radius: 5px;
+}
