--- a/client/webserver/site/src/css/mm.scss
+++ b/client/webserver/site/src/css/mm.scss
@@ -52,6 +52,14 @@ div[data-handler=mm] {
     }
   }
 
+  .bot-problems-section {
+    background-color: #f00a;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    padding-left: 2px;
+    border-radius: 5px;
+  }
+
   #marketFilterIcon {
     position: absolute;
     left: 10px;
