--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -813,6 +813,10 @@
     <form class="d-hide" id="accelerateForm">
       {{template "accelerateForm" .}}
     </form>
+
+    <form class="position-relative d-hide" id="orderReportForm" autocomplete="off">
+      {{template "orderReportForm"}}
+    </form>
   </div>
 
 </div>
