make epoch reporting a little less scary

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -899,13 +899,13 @@
   <div class="flex-stretch-column mt-2 px-3">
     <div data-tmpl="buyOrdersReportBox" class="d-flex justify-content-between align-items-center d-hide">
       <span data-tmpl="buyOrdersSuccess" class="text-buycolor">[[[buy_orders_success]]]</span>
-      <span data-tmpl="buyOrdersFailed" class="d-hide text-danger">[[[buy_orders_failed]]]</span>
+      <span data-tmpl="buyOrdersFailed" class="d-hide text-warning">[[[buy_orders_failed]]]</span>
       <button data-tmpl="buyOrdersBttn" class="ico-open"></button>
     </div>
 
     <div data-tmpl="sellOrdersReportBox" class="d-flex justify-content-between align-items-center d-hide">
       <span data-tmpl="sellOrdersSuccess" class="text-buycolor">[[[sell_orders_success]]]</span>
-      <span data-tmpl="sellOrdersFailed" class="d-hide text-danger">[[[sell_orders_failed]]]</span>
+      <span data-tmpl="sellOrdersFailed" class="d-hide text-warning">[[[sell_orders_failed]]]</span>
       <button data-tmpl="sellOrdersBttn" class="ico-open"></button>
     </div>
 
