webserver/site: use border color to show if address is valid or invalid (#3040)
* webserver/site: use border color to show if address is valid or invalid
---------
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -22,6 +22,14 @@ textarea {
     outline: none;
   }
 
+  &.border-danger {
+    border-color: var(--text-danger);
+  }
+  
+  &.border-success {
+    border-color: var(--indicator-good);
+  }
+
   &.thin {
     width: 4rem;
   }
