mm: Epoch reports follow up
Some code clean up and fixes.
- Removed unused code related to the simple arb
- Simple arb bot was not reporting if the CEX orderbook was not synced
- Fixes a divide by 0 panic happening in libxc.orderbook.vwap

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -1095,7 +1095,7 @@
           <td id="cexRequired" class="border text-center"></td>
           <td id="cexUsed" class="border text-center"></td>
           <td id="cexRemaining" class="border text-center"></td>
-          <td id="cexDeficiency" class="border text-center"></td>
+          <td id="cexDeficiency" class="border text-center text-warning"></td>
           <td id="cexDeficiencyWithPending" class="border text-center"></td>
         </tr>
       </tbody>
