remove inline styling from placement errors table

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -538,6 +538,10 @@ div[data-handler=init] {
   }
 }
 
+#placementsBody td[data-tmpl=error] {
+  max-width: 200px;
+}
+
 body.dark {
   ::-webkit-calendar-picker-indicator {
     filter: invert(1);
