--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -1137,7 +1137,7 @@
           <td data-tmpl="usedDEX" class="text-center border"></td>
           <td data-tmpl="requiredCEX" class="text-center border"></td>
           <td data-tmpl="usedCEX" class="text-center border"></td>
-          <td data-tmpl="error" class="text-center border text-danger" style="max-width: 200px"></td>
+          <td data-tmpl="error" class="text-center border text-danger"></td>
         </tr>
       </tbody>
     </table>
