some ui touchup

--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -151,9 +151,6 @@
                       <button data-tmpl="reconfigureBttn">
                         <span class="ico-settings fs17"></span>
                       </button>
-                      <button class="ms-1 danger" data-tmpl="removeBttn">
-                        <span class="ico-cross fs17"></span>
-                      </button>
                     </div>
                   </div>
                   <span data-tmpl="offError" class="fs16 px-3 text-center text-warning d-hide"></span>
@@ -410,6 +407,12 @@
                     </div>
                     <div data-tmpl="placementsChart" class="flex-grow-1 border-start position-relative"></div>
                   </div>
+                  <div class="py-1 px-3 d-flex justify-content-start grey border-top">
+                    <span data-tmpl="removeBttn" class="pointer hoverbg flex-center">
+                      <span class="ico-cross fs11 me-1"></span>
+                      delete this bot
+                    </span>
+                  </div>
                 </div>
 
                 {{- /* NO FIAT RATES */ -}}
@@ -616,14 +619,10 @@
 
     <form class="position-relative mw-425 d-hide" id="confirmRemoveForm" autocomplete="off">
       <div class="form-closer"><span class="ico-cross"></span></div>
-      <div>
-        <header>[[[removing_bot_config]]]</header>
-        <div>
-          <span id="confirmRemoveCfgMsg"></span>
-        </div>
-        <button id="confirmRemoveConfigBttn" type="button" class="feature mt-2">Confirm</button>
-        <div id="removeCfgErr" class="fs15 text-center d-hide text-danger text-break"></div>
-      </div>
+      <header>[[[delete_bot]]]</header>
+      <div id="confirmRemoveCfgMsg"></div>
+      <button id="confirmRemoveConfigBttn" type="button" class="feature mt-2 mx-2">Confirm</button>
+      <div id="removeCfgErr" class="fs15 text-center d-hide text-danger text-break"></div>
     </form>
   </div>  {{- /* END FORMS */ -}}
 </div>
