client,webserver: Hide Settings link when user un-authed
	- Also replaced the deleted Doc.bind 'Add Dex'

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -97,7 +97,7 @@
       <span class="ico-barchart fs16 me-2"></span>
       [[[Market Making]]]
     </a>
-    <a href="/settings" class="demi hoverbright plainlink d-flex align-items-center py-1">
+    <a href="/settings" class="demi hoverbright plainlink d-flex align-items-center py-1 authed-only">
       <span class="ico-settings fs16 me-2"></span>
       [[[Settings]]]
     </a>
