client,webserver: more fitting place to inject app.Version
	Also:
	- Translation string 'BUILD ID' is no longer used.
	- 'BUILD ID' => 'Version'
	- Translations updated to mean Version - not Build Id.
	  except arabic as I cannot handle the input method to
	  edit arabic as the arrow/BS keys go the wrong way in
	  the editor. And I do not understand how the editor
	  concatenates arabic strings.
	  Meaning left as previously translated: Build Id.

--- a/client/webserver/site/src/html/settings.tmpl
+++ b/client/webserver/site/src/html/settings.tmpl
@@ -80,7 +80,7 @@
         <span class="ico-ticket"></span> [[[Redeem game code]]]
       </div>
       {{$version := .AppVersion}}
-      <p class="grey">[[[Build ID]]]: <span id="version" class="mono">{{$version}}</span></p>
+      <p class="grey">[[[Version]]]: <span id="version" class="mono">{{$version}}</span></p>
     </div>
   </section>
 
