client,webserver: webpack build ID used as browser cache ID.
	- Emit a webpack build ID when building site and store in webpack-build-id.txt

	- Embed the webpack build ID into bodybuilder as a url query string:-
	  webpackBuildIdQuery fetches latest webpack build from the webpack-build-id.txt
	  file in app site directory and makes it available to append to the main css
	  link and to the main script link in bodybuilder; this should cause no reload
	  of the main css/js files if they are already cached by the browser.
	  If webpackBuildIdFile is not found return a fallback query that will make the
	  browser reload css/js.

	- Some eslint in webpack dir.

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -9,7 +9,7 @@
   <link rel="icon" href="/img/favicon.png?v=AZ4AZX">
   <meta name="description" content="Bison Wallet">
   <title>{{.Title}}</title>
-  <link href="/css/style.css" rel="stylesheet">
+  <link href="/css/style.css{{webpackBuildIdQuery}}" rel="stylesheet">
 </head>
 <body {{if .UseDEXBranding}}class="dex-branding"{{end}}>
   <div class="popup-notes d-hide" id="popupNotes">
@@ -257,7 +257,7 @@
   </div>
 </div>
 
-<script src="/js/entry.js"></script>
+<script src="/js/entry.js{{webpackBuildIdQuery}}"></script>
 </body>
 </html>
 {{end}}
