client: Re-work profile dropdown to show simplified, user-facing app version

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -123,13 +123,14 @@
       <span class="ico-profile fs16 me-2"></span>
       [[[Sign Out]]]
     </div>
-    <div class="demi d-flex align-items-center py-1" id="version">
-      <br>
+    <div class="border-bottom py-2"></div>
+    <div class="demi-sans d-flex align-items-center py-1" id="version">
       <div class="flex-center">
         [[[Version]]] {{.Version}}
       </div>
     </div>
   </div>
+
 
 </header>
 {{end}}
