--- a/client/webserver/site/src/css/icons.scss
+++ b/client/webserver/site/src/css/icons.scss
@@ -227,6 +227,14 @@
   content: "\e91c";
 }
 
+.ico-global::before {
+  content: "\e91d";
+}
+
+.ico-sort::before {
+  content: "\e91e";
+}
+
 .ico-cogs::before {
   content: "\e995";
 }
