--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -1,4 +1,4 @@
-.walletspage {
+[data-handler=wallets] {
   .ico-unlocked {
     color: var(--indicator-good);
   }
@@ -110,18 +110,6 @@
 
   #walletInfo {
     border-left: none;
-
-    table#walletInfoTable {
-      td {
-        padding: 2px 5px 2px 0;
-        line-height: 1;
-
-        &:last-child {
-          text-align: right;
-          padding-left: 1rem;
-        }
-      }
-    }
   }
 
   #earlierTxs, #txViewBlockExplorer {
@@ -160,6 +148,18 @@
       width: 18px;
       height: 18px;
     }
+
+    &:not(.multinet) .multinetonly {
+      display: none !important;
+    }
+
+    &.multinet .uninetonly {
+      display: none !important;
+    }
+
+    &:not(.token) .tokenonly {
+      display: none !important;
+    }
   }
 
   .peers-table-icon {
@@ -187,6 +187,13 @@
   .negative-tx {
     color: $danger;
   }
+
+  #docs {
+    .plainlink:visited,
+    .plainlink:hover {
+      text-decoration: none;
+    }
+  }
 }
 
 @include media-breakpoint-up(xl) {
@@ -209,7 +216,7 @@
     @include stylish-overflow;
   }
 
-  .walletspage {
+  [data-handler=wallets] {
     #walletDetailsBox {
       border-bottom: none !important;
     }
@@ -225,7 +232,7 @@
 }
 
 @include media-breakpoint-up(sm) {
-  .walletspage {
+  [data-handler=wallets] {
     #walletDetailsBox {
       #assetLogo {
         width: 40px;
@@ -278,7 +285,7 @@
 }
 
 @include media-breakpoint-up(md) {
-  .walletspage {
+  [data-handler=wallets] {
     #sendReceive {
       border-bottom: none;
     }
