--- a/client/webserver/site/src/html/init.tmpl
+++ b/client/webserver/site/src/html/init.tmpl
@@ -26,7 +26,7 @@
             [[[Restoration Seed]]]
           </label>
         </div>
-        <button id="appPWSubmit" type="submit" class="flex-grow-1 feature ms-2">[[[Submit]]]</button>
+        <button id="appPWSubmit" class="flex-grow-1 feature ms-2">[[[Submit]]]</button>
       </div>
       <div id="seedInputBox" class="d-hide">
         <textarea class="w-100 mono" id="seedInput" rows="4" autocomplete="off" spellcheck="false"></textarea>
@@ -56,7 +56,7 @@
             <span data-tmpl="host" class="ms-2 fs18 lh1"></span>
           </label>
         </div>
-        <button id="quickConfigSubmit" type="submit" class="feature my-2">[[[Submit]]]</button>
+        <button id="quickConfigSubmit" class="feature my-2">[[[Submit]]]</button>
       </div>
 
       <div id="qcErrors" class="d-hide">
