--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -60,10 +60,7 @@
 
 {{define "newWalletForm"}}
 <div class="form-closer"><span class="ico-cross"></span></div>
-<header>
-  <span class="fs14 ico-plus grey me-2"></span>
-  <span>[[[add_a_x_wallet]]]</span>
-</header>
+<header class="flex-center">[[[add_a_x_wallet]]]</header>
 <div class="flex-center pb-2 border-bottom d-hide" data-tmpl="tokenMsgBox">
   <span>[[[Token on]]]</span>
   <img data-tmpl="tokenParentLogo" class="ms-1 micro-icon">
@@ -91,21 +88,9 @@
       </label>
       <input type="password" data-tmpl="newWalletPass" autocomplete="off">
     </div>
-    <button data-tmpl="submitAdd" type="submit" class="feature flex-grow-1">[[[Add]]]</button>
+    <button data-tmpl="submitAdd" class="feature flex-grow-1">[[[Add]]]</button>
   </div>
   <div class="p-3 text-center d-hide text-danger text-break" data-tmpl="newWalletErr"></div>
-</div>
-<div class="d-hide flex-center flex-column" data-tmpl="parentSyncing">
-  <div>
-    [[[Synchronizing]]] <img data-tmpl="parentLogo" class="micro-icon"> <span data-tmpl="parentName"></span>.
-  </div>
-
-  <div class="fs20 pt-3">
-    <span data-tmpl="parentSyncPct"></span> %
-  </div>
-  <div class="pt-3">
-    <img data-tmpl="childLogo" class="micro-icon"> <span data-tmpl="childName"></span> [[[wallet_wait_synced]]].
-  </div>
 </div>
 {{end}}
 
@@ -113,35 +98,46 @@
 <div class="form-closer"><span class="ico-cross"></span></div>
 <header>
   [[[Receive]]]
-  <img id="depositLogo" class="mini-icon mx-1">
-  <span id="depositName"></span>
+  <img data-tmpl="depositLogo" class="mini-icon mx-1">
+  <span data-tmpl="depositName"></span>
 </header>
-<div class="flex-center d-hide fs18 sans pb-3 border-bottom" id="depositTokenMsgBox">
-  <span>[[[Token on]]]</span>
-  <img id="depositTokenParentLogo" class="ms-1 micro-icon">
-  <span id="depositTokenParentName"></span>
-</div>
-<div class="flex-center">
-  <img id="qrcode" />
-</div>
-<div>
-  <div class="mono fs15 px-2 py-1 border word-break-all border">
-    <span id="depositAddress" class="user-select-all"></span>
-    <span id="copyAddressBtn" class="ico-copy mt-2 ml-2 fs18 pointer"></span>
-    <span id="copyAlert" class="d-hide text-nowrap">[[[copied]]]</span>
+<div data-tmpl="netSelectForm">
+  <div class="p-3 fs22">Select a Network</div>
+  <div data-tmpl="netSelectBox" class="flex-stretch-column">
+    <button type="button" data-tmpl="netSelectBttnTmpl" class="flex-center mb-2">
+      <img data-tmpl="logo" class="mini-icon me-1">
+      <span data-tmpl="chainName" class="fs20"></span>
+    </button>
   </div>
 </div>
+<div data-tmpl="mainForm">
+  <div class="flex-center d-hide fs18 sans pb-3 border-bottom" data-tmpl="depositTokenMsgBox">
+    <span>[[[Token on]]]</span>
+    <img data-tmpl="depositTokenParentLogo" class="ms-1 micro-icon">
+    <span data-tmpl="depositTokenParentName"></span>
+  </div>
+  <div class="flex-center my-2">
+    <img data-tmpl="qrcode" />
+  </div>
+  <div>
+    <div class="mono fs15 px-2 py-1 border word-break-all border">
+      <span data-tmpl="depositAddress" class="user-select-all"></span>
+      <span data-tmpl="copyAddressBtn" class="ico-copy mt-2 ml-2 fs18 pointer"></span>
+      <span data-tmpl="copyAlert" class="d-hide text-nowrap">[[[copied]]]</span>
+    </div>
+  </div>
 
-<div id="unifiedReceivers" class="d-flex align-items-stretch">
-  <div id="unifiedReceiverTmpl" class="p-1 me-2 hoverbg lh1 fs15 pointer brdr selectable"></div>
+  <div data-tmpl="unifiedReceivers" class="d-flex align-items-stretch">
+    <div data-tmpl="unifiedReceiverTmpl" class="p-1 me-2 hoverbg lh1 fs15 pointer brdr selectable"></div>
+  </div>
+  <div id="addrUsed" class="my-1 text-center fs15 grey lh1 text-warning">
+    [[[address has been used]]]
+  </div>
+  <div data-tmpl="newDepAddrBttnBox" class="flex-stretch-column">
+    <button data-tmpl="newDepAddrBttn" type="button" class="feature">[[[New Address]]]</button>
+  </div>
+  <div class="fs15 text-center d-hide text-danger text-break" data-tmpl="depositErr"></div>
 </div>
-<div id="addrUsed" class="my-1 text-center fs15 grey lh1 text-warning">
-  [[[address has been used]]]
-</div>
-<div id="newDepAddrBttnBox" class="flex-stretch-column">
-  <button id="newDepAddrBttn" type="button" class="feature">[[[New Address]]]</button>
-</div>
-<div class="fs15 text-center d-hide text-danger text-break" id="depositErr"></div>
 {{end}}
 
 {{define "certPicker"}}
@@ -524,7 +520,7 @@
   <input type="password" id="confirmNewPW" autocomplete="new-password">
 </div>
 <div class="flex-stretch-column pt-2 px-3 pb-3">
-  <button id="submitNewPW" type="submit" class="feature">[[[Submit]]]</button>
+  <button id="submitNewPW" class="feature">[[[Submit]]]</button>
 </div>
 <div class="fs15 p-3 text-center d-hide text-danger text-break" id="changePWErrMsg"></div>
 {{end}}
