Mobile companion app and tor implementation (#2715)
Co-authored-by: Brian Stafford <buck54321@gmail.com>

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -282,6 +282,7 @@ div[data-handler=register] {
 #exportSeedAuth,
 #cancelForm,
 #quickConfigForm,
+#companionAppForm,
 #toggleWalletStatusConfirm,
 #walletWait {
   width: 375px;
