client: Use the app build version as Version in UI in hamburger menu. (#3121)
* client: Use the app build version as Version in UI in hamburger menu #2.

	- This is a rework of #3096 and keeps the Build ID in the
	  settings dialog.

	- Webpack Build ID for caching site/dist build will be
	  addressed in another PR if required.

* client: Re-work profile dropdown to show simplified, user-facing app version

* client,webserver: re-work to modify config per JoeGruff suggestions #2

* client,app,webserver: Remove un-needed configuration variables.

---------

Co-authored-by: dev-warrior777 <>

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -97,7 +97,7 @@
       <span class="ico-barchart fs16 me-2"></span>
       [[[Market Making]]]
     </a>
-    <a href="/settings" class="demi hoverbright plainlink d-flex align-items-center py-1">
+    <a href="/settings" class="demi hoverbright plainlink d-flex align-items-center py-1 authed-only">
       <span class="ico-settings fs16 me-2"></span>
       [[[Settings]]]
     </a>
@@ -118,7 +118,14 @@
       <span class="ico-profile fs16 me-2"></span>
       [[[Sign Out]]]
     </div>
+    <div class="border-bottom py-2"></div>
+    <div class="demi-sans d-flex align-items-center py-1" id="version">
+      <div class="flex-center">
+        [[[Version]]] {{.Version}}
+      </div>
+    </div>
   </div>
+
 
 </header>
 {{end}}
