client: Add penalty comps message.

--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -63,7 +63,7 @@
             </div>
             <div class="col-6 text-end">
               <span id="penaltyComps"></span>
-              <input id="penaltyCompInput" type="number" step="1" class="micro thin text-center d-hide fs14" {{if .Exchange.Disabled}}disabled{{end}}>
+              <input id="penaltyCompInput" type="number" step="1" class="micro thin text-center fs14" {{if .Exchange.Disabled}}disabled{{end}}>
             </div>
           </div>
           <div id="penaltyCompsErr" class="d-hide flex-center text-danger fs15"></div>
