--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -240,6 +240,17 @@
                 </div>
               </div>
 
+              {{- /* PENALTY COMPS REQUIRED TO TRADE */ -}}
+              <div class="d-hide p-2 mt-2" id="penaltyCompsRequired">
+                <div class="p-3 flex-center fs16 grey">[[[action_required_to_trade]]]</div>
+                <div class="border-top border-bottom flex-center p-2">
+                  <p class="text-center fs14 p-2 m-0">
+                  [[[set_penalty_comps]]]
+                  <a id="compsDexSettingsLink" class="fs15 hoverbg subtlelink">[[[update_penalty_comps]]]</a>
+                  </p>
+                </div>
+              </div>
+
               {{- /* BOND REQUIRED TO TRADE */ -}}
               <div class="d-hide p-2 mt-2" id="bondRequired">
                 <div class="p-3 flex-center fs16 grey">[[[action_required_to_trade]]]</div>
